# Make-suggestion-with-gene-expression-data

./: MANIFEST.in
Project_BioDB/: Main.py  README.md  dataset_label.txt  pyproject.toml  requirements.txt
Project_BioDB/docs/: CODE_STRUCTURE.md
Project_BioDB/project_bioDB/: cmap.py  recommendation.py
docs/: STRUCTURE.md
project_bioDB/: __init__.py  analyze.py  signiture.py
