[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_bioDB"
version = "0.1.0"
description = "A pipeline for gene signature extraction and drug repurposing using CMap and ChEMBL"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "pydeseq2>=0.4.0",
    "cmapPy>=4.0.1"
]
